NIFI-12103 Replaced deprecated usage of new URL(String)
This closes #7771

Signed-off-by: David Handermann <exceptionfactory@apache.org>

(cherry picked from commit 2aca08910c4e06fff2c98d3794d9b5a3cd427988)